# ascii-art

./: .gitignore  Application_8cpp.html  Application_8cpp.js  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_afdf87bba516776c08119649e981d34f2_icgraph.map  Application_8cpp_afdf87bba516776c08119649e981d34f2_icgraph.md5  Application_8h.html  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  BMPImage_8cpp.html  BMPImage_8cpp__incl.md5  BMPImage_8h.html  BMPImage_8h__dep__incl.map  BMPImage_8h__dep__incl.md5  BMPImage_8h_source.html  BasicFilter_8cpp.html  BasicFilter_8h.html  BasicFilter_8h__dep__incl.map  BasicFilter_8h__dep__incl.md5  BasicFilter_8h__incl.map  BasicFilter_8h__incl.md5  BasicFilter_8h_source.html  BufferedFrame_8cpp.html  BufferedFrame_8cpp__incl.map  BufferedFrame_8cpp__incl.md5  BufferedFrame_8h.html  BufferedFrame_8h__dep__incl.map  BufferedFrame_8h__dep__incl.md5  BufferedFrame_8h__incl.map  BufferedFrame_8h__incl.md5  BufferedFrame_8h_source.html  CMakeLists.txt  Color_8cpp.html  Color_8cpp__incl.map  Color_8cpp__incl.md5  Color_8cpp_a54c2579ab3a14c8be20185336ab9e3b3_icgraph.map  (+888 more)
.github/workflows/: codeql.yml  documentation.yml  test.yml
docs/: Application_8cpp.html  Application_8cpp__incl.dot  Application_8h.html  Application_8h__dep__incl.dot  Application_8h__incl.dot  Application_8h_source.html  BMPImage_8cpp.html  BMPImage_8cpp__incl.map  BMPImage_8h.html  BMPImage_8h__incl.map  BMPImage_8h__incl.md5  BMPImage_8h_source.html  BasicFilter_8cpp.html  BasicFilter_8cpp__incl.map  BasicFilter_8cpp__incl.md5  BasicFilter_8h.html  BasicFilter_8h__dep__incl.map  BasicFilter_8h__dep__incl.md5  BasicFilter_8h__incl.map  BasicFilter_8h_source.html  Color_8cpp.html  Color_8cpp.js  Color_8cpp_a54c2579ab3a14c8be20185336ab9e3b3_icgraph.map  Color_8cpp_a54c2579ab3a14c8be20185336ab9e3b3_icgraph.md5  Color_8cpp_ae75a63a3cb862b7bc29a8adc6c32f62a_icgraph.md5  Color_8h.html  Color_8h__dep__incl.dot  Color_8h_source.html  DataSourceFactory_8cpp.html  DataSourceFactory_8cpp.js  DataSourceFactory_8cpp__incl.map  DataSourceFactory_8cpp_aff875062104f1676411c5f9ae67d6354_icgraph.md5  DataSourceFactory_8h.html  DataSourceFactory_8h__dep__incl.md5  DataSourceFactory_8h__incl.map  DataSourceFactory_8h__incl.md5  DataSourceFactory_8h_source.html  DataSource_8cpp.html  DataSource_8cpp__incl.dot  DataSource_8h.html  (+489 more)
docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+56 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  defines_0.js  (+68 more)
src/: FileManager.cpp  FileManager.h  main.cpp
src/ascii-art/: Application.cpp  Application.h  Menu.cpp  Menu.h  Settings.cpp  Settings.h
src/ascii-art/logging/: LogLevel.cpp  LogLevel.h  Logger.cpp  Logger.h
src/ascii-art/menus/: FileMenu.cpp  FileMenu.h  Gallery.cpp  Gallery.h  Menu.h
src/ascii-art/sources/: BufferedFrame.cpp  BufferedFrame.h  Color.cpp  Color.h  DataSource.cpp  DataSource.h  DataSourceFactory.cpp  DataSourceFactory.h  Filter.h  Frame.cpp  Frame.h  Image.cpp  Image.h  ImageFrame.cpp  ImageFrame.h  SourceType.h  Video.cpp  Video.h
src/ascii-art/sources/filters/: BasicFilter.cpp  BasicFilter.h  Filter.h
src/ascii-art/sources/image-formats/: BMPImage.cpp  BMPImage.h  JPEGImage.cpp  JPEGImage.h  PNGImage.cpp  PNGImage.h
src/container/: Matrix.h  Vector.cpp  Vector.h
src/tests/: Test.cpp  Test.h  TestFileManager.cpp  TestFileManager.h  TestMain.cpp
src/tests/ascii-art/sources/image-formats/: TestJPEGImage.cpp  TestJPEGImage.h  TestPNGImage.cpp  TestPNGImage.h
src/tests/container/: TestMatrix.cpp  TestMatrix.h  TestVector.cpp  TestVector.h
